force-app/main/default/objects/Tier_Quantity_Range_lookup_Table__c/Tier_Quantity_Range_lookup_Table__c.object-meta.xml
<CustomObject>
    <description>SOX object - A metadata object which is used to store Approval Category, Quantity range, Discounts based on which Approval Rules are triggered to decide whether we need approvals from Deal Desk, RSM OR RD OR RVP</description>
    <label>Tier Quantity Range lookup Table</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Tier Quantity Range lookup Table Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tier Quantity Range lookup Table</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>