force-app/main/default/objects/Tier_Quantity_Range_lookup_Table__c/fields/Approval_Category__c.field-meta.xml
<CustomField>
    <fullName>Approval_Category__c</fullName>
    <label>Approval Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>