force-app/main/default/objects/Tier_Quantity_Range_lookup_Table__c/fields/Approver_CEM__c.field-meta.xml
<CustomField>
    <fullName>Approver_CEM__c</fullName>
    <label>Approver CEM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>