force-app/main/default/objects/Tier_Quantity_Range_lookup_Table__c/fields/Discount_RSM__c.field-meta.xml
<CustomField>
    <fullName>Discount_RSM__c</fullName>
    <label>Discount Approver 1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>