force-app/main/default/objects/Tier_Quantity_Range_lookup_Table__c/fields/DiscountRxSecurity__c.field-meta.xml
<CustomField>
    <fullName>DiscountRxSecurity__c</fullName>
    <description>This stores the discounts for Rx Security Approvers.</description>
    <label>Discount Rx Security</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>