force-app/main/default/objects/Tier_Quantity_Range_lookup_Table__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>US</fullName>
            </value>
            <value>
                <fullName>Non-US</fullName>
            </value>
            <value>
                <fullName>All</fullName>
                <default>true</default>
                <label>All</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>