force-app/main/default/objects/Tier_Quantity_Range_lookup_Table__c/fields/Quantity_Lower_Bound__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Lower_Bound__c</fullName>
    <label>Quantity Lower Bound</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>