force-app/main/default/objects/Tier_Quantity_Range_lookup_Table__c/fields/Rx_Approver__c.field-meta.xml
<CustomField>
    <fullName>Rx_Approver__c</fullName>
    <description>Rx Security approver</description>
    <label>Rx Approver</label>
    <length>255</length>
    <type>Text</type>
</CustomField>