force-app/main/default/objects/Tier_Quantity_Range_lookup_Table__c/fields/Skip_Standard_Discount_Approvals__c.field-meta.xml
<CustomField>
    <fullName>Skip_Standard_Discount_Approvals__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to skip the generic RSM, RD and DD Discount Approvals. Usually only used if sku specific Approval chain and rules are requested/created separately</description>
    <label>Skip Standard Discount Approvals</label>
    <type>Checkbox</type>
</CustomField>