force-app/main/default/objects/Tier_Quantity_Range_lookup_Table__c/fields/Tier_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Tier_Quantity__c</fullName>
    <description>This field will concatenate the Quantity Lower Bound and Quantity Upper Bound number fields.</description>
    <formula>TEXT(Quantity_Lower_Bound__c) &amp;
IF(
    NOT(ISBLANK(Quantity_Upper_Bound__c)),
    &apos;-&apos; &amp; TEXT(Quantity_Upper_Bound__c),
    &apos;&apos;
)</formula>
    <inlineHelpText>concatenate the Quantity Lower Bound and Quantity Upper Bound.</inlineHelpText>
    <label>Tier Quantity</label>
    <type>Text</type>
</CustomField>