force-app/main/default/objects/Tier_Quantity_Range_lookup_Table__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Approval_Category__c</columns>
    <columns>Quantity_Lower_Bound__c</columns>
    <columns>Quantity_Upper_Bound__c</columns>
    <columns>Tier__c</columns>
    <columns>Discount_RSM__c</columns>
    <columns>Discount_DD__c</columns>
    <columns>Approver_1__c</columns>
    <columns>Approver_2__c</columns>
    <columns>Location__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>